tacker/tests/unit/vnfm/infra_drivers/kubernetes/kubernetes_api_resource/daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
status:
  currentNumberScheduled: 1
  desiredNumberScheduled: 1
  numberMisscheduled: 1
  numberReady: 1
  conditions:
    - status: True
      type: DaemonSet
