tacker/tests/unit/vnfm/infra_drivers/kubernetes/kubernetes_api_resource/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: curry-ns
status:
  conditions:
    - status: True
      type: Namespace
