tacker/tests/unit/vnfm/infra_drivers/kubernetes/kubernetes_api_resource/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curry-endpoint-test001
  ownerReferences:
    - apiVersion: apps/v1
      controller: true
      blockOwnerDeletion: true
      kind: ReplicaSet
      name: my-repset
      uid: d9607e19-f88f-11e6-a518-42010a800195
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: web-server
    ports:
    - containerPort: 8080
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        httpHeaders:
          - name: Custom-Header
            value: Awesome
      tcpSocket:
        port: 8080
      initialDelaySeconds: 3
      periodSeconds: 3
    volumeDevices:
      - name: data
        devicePath: /dev/xvda
    volumeMounts:
      - name: redis-storage
        mountPath: /data/redis
    env:
      - value_from:
          config_map_key_ref:
            key: test
          secret_key_ref:
            key: test
        name: test
  readinessGates:
    - conditionType: "www.example.com/feature-1"
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "0"
  topologySpreadConstraints:
    - maxSkew: 1
      topologyKey: zone
      whenUnsatisfiable: DoNotSchedule
      labelSelector:
        matchLabels:
          foo: bar
  ephemeralContainers:
    - name: debugger
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/e2e-az-name
            operator: In
            values:
            - e2e-az1
            - e2e-az2
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 1
          preference:
            matchExpressions:
              - key: another-node-label-key
                operator: In
                values:
                  - another-node-label-value
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          podAffinityTerm:
            labelSelector:
              matchExpressions:
                - key: security
                  operator: In
                  values:
                    - S2
            topologyKey: topology.kubernetes.io/zone
status:
  containerStatuses:
    - lastState:
        terminated:
          exitCode: 1
      image: test
      image_id: 123
      name: test
      ready: True
      restart_count: 1
  conditions:
    - status: True
      type: Pod
