tacker/tests/unit/vnfm/infra_drivers/kubernetes/kubernetes_api_resource/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver
    vdu_name: curry-svc-vdu001
  name: curry-svc-vdu001
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: webserver
  type: NodePort
